--- a/teste.html
+++ b/teste.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <div id="title">
+        <div class="title">
             <h1>Marketing</h1>
             <h1>Criativo</h1>
         </div>
@@ -35,7 +35,7 @@
 
     <main>
         <aside> 
-            <h2 class=""><span>Inscreva-se agora</span> </h2>
+            <h2 class="news"><span>Inscreva-se agora</span> </h2>
             <h2> na Newsletter</h2>
             <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
             <form>
