Consertandposicionamento dos links do menu

--- a/teste.html
+++ b/teste.html
@@ -21,13 +21,13 @@
             <h1>Criativo</h1>
         </div>
 
-        <ul class="">
-            <a href="#"><li> Inicio </li></a>
-            <a href="#"><li> Servicos </li></a>
-            <a href="#"><li> Sobre </li></a>
-            <a href="#"><li> Contato </li></a>
+        <div class="menu">
+            <a href="#"> Inicio</a>
+            <a href="#"> Servicos </a>
+            <a href="#"> Sobre </a>
+            <a href="#">Contato </a>
             <a href="#" id="inscreva-se-btn"><li> Já tem uma conta? </li></a>
-        </ul>
+        <div>
 
     </header>
      
